# dealership-intelligence-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  bootstrap_day1_part2.py  fix_generators.py  pyproject.toml
dbt/: .user.yml  dbt_project.yml  profiles.yml
scripts/: generate_synthetic_data.py  load_to_duckdb.py  run_agent.py  sanity_check_synthetic_data.py  start_api.py  train_models.py  verify_agent.py  verify_api.py  verify_dbt.py  verify_ml.py
src/dealership/agents/: __init__.py  graph.py  prompts.py  state.py  tools.py
src/dealership/api/: main.py
src/dealership/api/routes/: llm.py  reps.py  sales.py  search.py
src/dealership/common/: config.py
src/dealership/ingestion/: chroma_loader.py  duckdb_loader.py
src/dealership/ingestion/synthetic/: catalog.py  generators.py  pipeline.py
src/dealership/ml/: __init__.py  aging_model.py  rep_clustering.py  sentiment.py  train.py
