[project]
name = "dealership-intelligence-agent"
version = "0.1.0"
description = "Multi-modal agentic analytics over dealership operations"
requires-python = ">=3.12,<3.13"
readme = "README.md"

dependencies = [
    "polars>=1.0",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "duckdb>=1.1",
    "faker>=30.0",
    "numpy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "typer>=0.12",
    "dbt-duckdb>=1.10.1",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "chromadb>=1.5.8",
    "httpx>=0.28.1",
    "xgboost>=3.2.0",
    "scikit-learn>=1.8.0",
    "mlflow>=3.11.1",
    "shap>=0.51.0",
    "transformers>=5.6.2",
    "torch>=2.11.0",
    "groq>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pre-commit>=3.8",
    "detect-secrets>=1.5",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dealership"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
